No animation anymore after having finished the rendering process #36082

Closed
opened 2013-07-10 13:57:23 +02:00 by Thomas Beck · 3 comments
Member

%%%Hi guys,

- Operating System, Graphics card ---

Ubuntu 64, i7, 2*GTX 560 tioc, 2gb ram each, 16GB system mem

- Blender version with error, and version that worked ---

Last trunk: r58143 does not work

- Short description of error ---

After having finished the rendering process, the animation stops working.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

While playing with a scene from Pablos VenomLab2 DVD (attached), I noticed the following:

  • I've set the "threads" from "2" to "auto" under the "Performance" panel and hit F12 to render a frame

  • Waited to complete the rendering process

  • After completion, gone back with esc

  • Now tried to play back the animation with alt+a

  • How Sergey said: The guy is not falling anymore... good for the guy, bad for Blender.

Looks like the animation system is not working anymore after the rendering process in this specific file!

Greetings, Thomas

P.S.: It's a scene from Pablos DVD under CC, so it should be ok to attach it here!%%%

%%%Hi guys, - Operating System, Graphics card --- Ubuntu 64, i7, 2*GTX 560 tioc, 2gb ram each, 16GB system mem - Blender version with error, and version that worked --- Last trunk: r58143 does not work - Short description of error --- After having finished the rendering process, the animation stops working. - Steps for others to reproduce the error (preferably based on attached .blend file) --- While playing with a scene from Pablos VenomLab2 DVD (attached), I noticed the following: - I've set the "threads" from "2" to "auto" under the "Performance" panel and hit F12 to render a frame - Waited to complete the rendering process - After completion, gone back with esc - Now tried to play back the animation with alt+a - > How Sergey said: The guy is not falling anymore... good for the guy, bad for Blender. Looks like the animation system is not working anymore after the rendering process in this specific file! Greetings, Thomas P.S.: It's a scene from Pablos DVD under CC, so it should be ok to attach it here!%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36082
No description provided.