Fix #36082: animation playback not working after rendering of background scenes and multiple render layer nodes. Also fixes issue with database free with vector blur after recent thread safety changes.